fix: improve mobile design responsiveness and layout
- Adjusted media queries to ensure proper scaling on small screens.
- Updated padding and margins for better alignment of elements.
- Fixed overlapping issues with the hero header and the hero design.
- Redesign the cursor.
- Tested on multiple devices to ensure consistent user experience.

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,3 +16,43 @@
     background: linear-gradient(90deg, rgba(216, 236, 248, 0), rgba(184, 216, 254, .32));
     width: 86px;
 }
+
+@mixin cursorStyle{
+    --show-cursor: none;
+    cursor: none; 
+    ::selection {
+        background: rgb(255, 255, 0);
+        background-blend-mode: overlay;
+        color:#151718;
+      }
+    &:hover {
+      --show-cursor: block;
+    }
+    &::after {
+        --cursor-width: max( 5px, calc( 0 * .4) );
+        
+        display: var(--show-cursor);
+        content:"";
+        pointer-events:none;
+        
+        background:transparent;
+        border: 2px solid #98c0ef;
+        border-radius: calc( 20px / 2 );
+        translate: -50% -50%;
+        
+        position:absolute;
+        top: var(--mouse-y, 0);
+        left: var(--mouse-x, 0);
+        
+        width: 20px;
+        height: 40px;
+        
+        cursor:none;
+        transition: height 0.3s cubic-bezier(0.095, 1.090, 0.605, 1.235),
+                    width 0.3s cubic-bezier(0.095, 1.090, 0.605, 1.235);
+        
+        backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur(3px);
+        
+      }
+}
