--- a/src/styles/contact2.scss
+++ b/src/styles/contact2.scss
@@ -158,3 +158,20 @@
     display: none;
   }
 }
+@media (max-width: 480px) {
+  .contact-lines-background .contact-line:nth-child(1) {
+       display: none;
+  }
+  .contact-lines-background .contact-line:nth-child(2) {
+       display: none;
+  }
+  .contact-lines-background .contact-line:nth-child(3) {
+       display: none;
+  }
+  .contact-lines-background .contact-line:nth-child(4) {
+        display: none;
+  }
+  .contact {
+    height: 30vh; 
+  }
+}
