--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -32,3 +32,9 @@
         }
     }
 }
+@media (max-width: 480px) {
+    .footer{
+        padding: 2rem;
+        text-align: center;
+    }
+}
