--- a/src/styles/heroHeading.scss
+++ b/src/styles/heroHeading.scss
@@ -69,5 +69,23 @@
 @media (max-width: 480px) {
     #hero_heading_section{
         margin-bottom: 0;
+        #hero_heading {
+            max-width: 370px;
+            #hello{
+                font-size: 25px;
+            }
+            .name {
+                padding-left: 5px;
+                height: 30px;
+                text-align: left;
+                h1{
+                    width: 100%;
+                    font-size: 25px;
+                }
+            }
+            .brackets {
+                padding: 0 13px;
+            }
+        }
     }
   }
