--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -7,45 +7,6 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-
-    --show-cursor: none;
-    cursor:none;
-    ::selection {
-        background: rgb(255, 255, 0);
-        background-blend-mode: overlay;
-        color:#151718;
-      }
-    &:hover {
-      --show-cursor: block;
-    }
-    
-    &::after {
-      --cursor-width: max( 5px, calc( 0 * .4) );
-      
-      display: var(--show-cursor);
-      content:"";
-      pointer-events:none;
-      
-      background:transparent;
-      border: 2px solid black;
-      border-radius: calc( 20px / 2 );
-      translate: -50% -50%;
-      
-      position:absolute;
-      top: var(--mouse-y, 0);
-      left: var(--mouse-x, 0);
-      
-      width: 20px;
-      height: 40px;
-      
-      cursor:none;
-      transition: height 0.3s cubic-bezier(0.095, 1.090, 0.605, 1.235),
-                  width 0.3s cubic-bezier(0.095, 1.090, 0.605, 1.235);
-      
-      backdrop-filter: blur(3px);
-      -webkit-backdrop-filter: blur(3px);
-      
-    }
   }
   .between-lines{
     position: relative;
